feat: API set LinkPreference to ME with timeout
